// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/AddressInput Address Input Disabled 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe kexQVt"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-disabled Mui-disabled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
        disabled={true}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-65 PrivateNotchedOutline-legendNotched-66"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input Loading 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <div
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-67 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-69 PrivateNotchedOutline-legendNotched-70"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Adornment 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root sc-jQrDum kynMoW"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-71 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-73 PrivateNotchedOutline-legendNotched-74"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With ENS Resolution 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    <span
      className="MuiSwitch-root sc-jJoQJp xxohc"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-75 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            checked={false}
            className="PrivateSwitchBase-input-78 MuiSwitch-input"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
    Simulate an error in the resolver ENS Network call
  </p>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginTop": "8px",
        "minHeight": "80px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
      spellCheck={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
        data-shrink={false}
        htmlFor="address"
        id="address-label"
      >
        Address with ENS
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-describedby="address-helper-text"
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          id="address"
          name="address"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Type safe.test to check ENS resolution"
          required={false}
          type="text"
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-79 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-81"
          >
            <span>
              Address with ENS
            </span>
          </legend>
        </fieldset>
      </div>
      <p
        className="MuiFormHelperText-root MuiFormHelperText-contained"
        id="address-helper-text"
      >
        Type safe.test to check ENS resolution!
      </p>
    </div>
    
  </div>
  <div
    style={
      Object {
        "marginTop": "8px",
        "minHeight": "80px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-gWXbKe flGugG"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink={true}
        htmlFor="customENSThrottleDelay"
        id="customENSThrottleDelay-label"
      >
        custom Delay (in milliseconds)
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-describedby="customENSThrottleDelay-helper-text"
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          id="customENSThrottleDelay"
          name="customENSThrottleDelay"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Customize your throttle delay for ENS resolution!"
          required={false}
          type="number"
          value={2000}
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-79 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-81 PrivateNotchedOutline-legendNotched-82"
          >
            <span>
              custom Delay (in milliseconds)
            </span>
          </legend>
        </fieldset>
      </div>
      <p
        className="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="customENSThrottleDelay-helper-text"
      >
        Customize your throttle delay for ENS resolution!
      </p>
    </div>
  </div>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
     
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Errors 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe fynudp"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="address-helper-text"
        aria-invalid={true}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-83 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-85 PrivateNotchedOutline-legendNotched-86"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
      id="address-helper-text"
    >
      Invalid Address
    </p>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Simple Address Validation 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-87 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-89 PrivateNotchedOutline-legendNotched-90"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
    0x123...
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input Without Prefix 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-91 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-93 PrivateNotchedOutline-legendNotched-94"
        >
          <span>
            Address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
    0x83eC7B0506556a7749306D69681aDbDbd08f0769
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Safe Address Input Validation 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    You can customize validations
  </p>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    valid values:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
    0x83eC7B0506556a7749306D69681aDbDbd08f0769 & rin:0x83eC7B0506556a7749306D69681aDbDbd08f0769
  </pre>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  />
  <div
    className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
      htmlFor="safeAddress"
      id="safeAddress-label"
    >
      Safe Address
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="safeAddress-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        id="safeAddress"
        name="safeAddress"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Type the valid safe address"
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-95 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-97"
        >
          <span>
            Safe Address
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-contained"
      id="safeAddress-helper-text"
    >
      Valid safe: 0x83eC7B0506556a7749306D69681aDbDbd08f0769
    </p>
  </div>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
     
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Simple Address Input 1`] = `
<div>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Network Settings:
  </p>
  <div
    className="MuiFormControl-root sc-kLwhqv hCASnh"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink={true}
    >
      Network
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root sc-bYoBSM hHIlXW MuiInputBase-formControl"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-network"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
        id="mui-component-select-network"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div>
          <p
            className="sc-crHmcD dtryax"
            color="text"
            size="sm"
          >
            Rinkeby (rin:)
          </p>
        </div>
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="network"
        onAnimationStart={[Function]}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        value="rin"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-99 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-101 PrivateNotchedOutline-legendNotched-102"
        >
          <span>
            Network
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <form
    autoComplete="off"
    noValidate={true}
    onSubmit={[Function]}
    style={
      Object {
        "display": "flex",
        "margin": "12px 0px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-gWXbKe eRauOW"
      spellCheck={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
        data-shrink={false}
        htmlFor="address"
        id="address-label"
      >
        Address
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input"
          disabled={false}
          id="address"
          name="address"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Ethereum address"
          required={false}
          type="text"
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-99 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-101"
          >
            <span>
              Address
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <button
      aria-label="load QR code"
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="sc-iqseJM drawdo"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M0 0H24V24H0z"
              />
              <path
                className="icon-color"
                d="M4 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4H4zM4 13h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-5c0-1.105.895-2 2-2zm0 2v5h5v-5H4zM15 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2h-5c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4h-5z"
                fillRule="nonzero"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 29 0)"
                width="3"
                x="13"
                y="13"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 41 0)"
                width="3"
                x="19"
                y="13"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 35 0)"
                width="3"
                x="16"
                y="16"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 41 0)"
                width="3"
                x="19"
                y="19"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 29 0)"
                width="3"
                x="13"
                y="19"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </form>
  <p
    className="MuiTypography-root sc-fbyfCU iNHYoN MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-fvxzrP gQXepa"
  >
     
  </pre>
</div>
`;
